--- a/src/styles/levels.scss
+++ b/src/styles/levels.scss
@@ -21,7 +21,7 @@
     .artic-level-canvas {
         float: left;
         margin: 0;
-        // border: 1px solid var(--color-grey);
+        border: 1px solid var(--color-grey);
         width: 100%;
         height: 100%;
         z-index: 1;
@@ -31,7 +31,7 @@
         top: 5px;
         left: 5px;
         background-color: transparent;
-        // border: 1px solid var(--color-grey);
+        border: 1px solid var(--color-grey);
         width:calc(100% - 10px);
         height: calc(100% - 10px);
         z-index: 2;
